# lcg-rand

./: .gitignore  Cargo.toml  LICENSE.md  README.md
src/: lib.rs
tests/: integration_test.rs
